--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header class="navbar">
         <nav class="nav-links">
             <a href="index.html" class="nav-item">Dashboard</a>
-            <a href="planner.html" class="nav-item">Planner</a>
+            <a href="time-blocks.html" class="nav-item">Time Blocks</a>
+            <a href="tasks.html" class="nav-item">Tasks</a>
             <a href="projects.html" class="nav-item">Projects</a>
         </nav>
     </header>
