--- a/planner.html
+++ b/planner.html
@@ -11,10 +11,16 @@
 
     <header class="navbar">
         <nav class="nav-links">
-            <a href="index.html" class="nav-item">Dashboard</a>
-            <a href="planner.html" class="nav-item active">Planner</a>
-            <a href="projects.html" class="nav-item">Projects</a>
-        </nav>
+    <a href="index.html" class="nav-item">Dashboard</a>
+    <a href="time-blocks.html" class="nav-item">Time Blocks</a>
+    <a href="tasks.html" class="nav-item">Tasks</a>
+    <a href="projects.html" class="nav-item">Projects</a>
+    <a href="workouts.html" class="nav-item">Workouts</a>
+    <a href="golf.html" class="nav-item">Golf</a>
+    <a href="shopping.html" class="nav-item">Shopping List</a>
+    <a href="calendar.html" class="nav-item">Calendar</a>
+</nav>
+
     </header>
 
     <main class="content-container planner-grid">
