--- a/workouts.html
+++ b/workouts.html
@@ -22,6 +22,7 @@
     <main class="content-container">
         <h1 class="title">My Weekly Workout Plan</h1>
         <p class="subtitle">Track your progress and stay on top of your goals.</p>
+        <button class="button" id="clear-all-btn">Clear All Workouts</button>
 
         <div class="card" id="monday">
             <h2>Monday</h2>
