--- a/shopping.html
+++ b/shopping.html
@@ -64,8 +64,9 @@
 
     </main>
     
-    <script src="shopping.js"></script>
+    <script src="scripts/shopping.js"></script>
 
 </body>
 </html>
+
 
