--- a/shopping.html
+++ b/shopping.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shopping Lists</title>
-<link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -18,6 +18,7 @@
             <a href="nutrition.html" class="nav-item">Nutrition</a>
             <a href="golf.html" class="nav-item">Golf</a>
             <a href="shopping.html" class="nav-item active">Shopping</a>
+            <a href="calendar.html" class="nav-item">Calendar</a>
         </div>
     </nav>
 
@@ -27,6 +28,7 @@
 
         <div class="card" id="groceries-list">
             <h2>Groceries</h2>
+            <button class="button clear-list-btn">Clear List</button>
             <div class="list-items-container">
                 </div>
             <div class="add-item-row">
@@ -37,6 +39,7 @@
 
         <div class="card" id="supplies-list">
             <h2>Supplies</h2>
+            <button class="button clear-list-btn">Clear List</button>
             <div class="list-items-container"></div>
             <div class="add-item-row">
                 <input type="text" class="input-field new-item-input" placeholder="Add a new item...">
@@ -46,6 +49,7 @@
 
         <div class="card" id="treat-yoself-list">
             <h2>TreatYoSelf</h2>
+            <button class="button clear-list-btn">Clear List</button>
             <div class="list-items-container"></div>
             <div class="add-item-row">
                 <input type="text" class="input-field new-item-input" placeholder="Add a new item...">
@@ -55,6 +59,7 @@
 
         <div class="card" id="gifts-list">
             <h2>Gifts</h2>
+            <button class="button clear-list-btn">Clear List</button>
             <div class="list-items-container"></div>
             <div class="add-item-row">
                 <input type="text" class="input-field new-item-input" placeholder="Add a new item...">
@@ -68,5 +73,3 @@
 
 </body>
 </html>
-
-
