--- a/golf.html
+++ b/golf.html
@@ -17,31 +17,33 @@
             <a href="workouts.html" class="nav-item">Workouts</a>
             <a href="nutrition.html" class="nav-item">Nutrition</a>
             <a href="golf.html" class="nav-item active">Golf</a>
+            <a href="shopping.html" class="nav-item">Shopping</a>
+            <a href="calendar.html" class="nav-item">Calendar</a>
         </div>
     </nav>
 
     <main class="content-container">
         <h1 class="title">My Golf Tracker</h1>
         <p class="subtitle">Track your rounds, practice sessions, and notes.</p>
+        <button class="button clear-all-golf-btn">Clear All Golf Data</button>
 
         <div class="card" id="golf-rounds">
             <h2>Actual Golf Rounds</h2>
-            <div class="rounds-list">
+            <div class="rounds-list golf-entry-list">
                 </div>
             <button class="button add-round-btn">Add Round</button>
         </div>
         
         <div class="card" id="practice-sessions">
             <h2>Practice Sessions & Notes</h2>
-            <div class="sessions-list">
+            <div class="sessions-list golf-entry-list">
                 </div>
             <button class="button add-session-btn">Add Session</button>
         </div>
 
     </main>
     
-    <script src="golf.js"></script>
+    <script src="scripts/golf.js"></script>
 
 </body>
 </html>
-
