--- a/shopping.html
+++ b/shopping.html
@@ -15,7 +15,6 @@
         <div class="nav-links">
             <a href="index.html" class="nav-item">Home</a>
             <a href="workouts.html" class="nav-item">Workouts</a>
-            <a href="nutrition.html" class="nav-item">Nutrition</a>
             <a href="golf.html" class="nav-item">Golf</a>
             <a href="shopping.html" class="nav-item active">Shopping</a>
             <a href="calendar.html" class="nav-item">Calendar</a>
@@ -25,6 +24,10 @@
     <main class="content-container">
         <h1 class="title">My Shopping Lists</h1>
         <p class="subtitle">Organize your shopping by category.</p>
+
+        <div class="card">
+            <canvas id="shopping-chart"></canvas>
+        </div>
 
         <div class="card" id="groceries-list">
             <h2>Groceries</h2>
@@ -69,6 +72,7 @@
 
     </main>
     
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts/shopping.js"></script>
 
 </body>
