--- a/calendar.html
+++ b/calendar.html
@@ -15,7 +15,6 @@
         <div class="nav-links">
             <a href="index.html" class="nav-item">Home</a>
             <a href="workouts.html" class="nav-item">Workouts</a>
-            <a href="nutrition.html" class="nav-item">Nutrition</a>
             <a href="golf.html" class="nav-item">Golf</a>
             <a href="shopping.html" class="nav-item">Shopping</a>
             <a href="calendar.html" class="nav-item active">Calendar</a>
@@ -26,14 +25,17 @@
         <h1 class="title">My Calendar</h1>
         <p class="subtitle">Plan your week and stay organized.</p>
         
+        <div class="card">
+            <canvas id="calendar-chart"></canvas>
+        </div>
+
         <div class="card calendar-container">
             </div>
 
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts/calendar.js"></script>
 
 </body>
 </html>
-
-
