--- a/golf.html
+++ b/golf.html
@@ -10,16 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <nav class="navbar">
-        <div class="nav-links">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="workouts.html" class="nav-item">Workouts</a>
-            <a href="golf.html" class="nav-item active">Golf</a>
-            <a href="shopping.html" class="nav-item">Shopping</a>
-            <a href="calendar.html" class="nav-item">Calendar</a>
-        </div>
-    </nav>
+    <a href="index.html" class="back-btn">← Back to Dashboard</a>
 
     <main class="content-container">
         <h1 class="title">My Golf Tracker</h1>
