--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="back-button-container">
+    <a href="index.html" class="back-button">&lt;</a>
+</div>
 
     <main class="content-container">
         <h1 class="title">Your All-in-One Assistant.</h1>
