--- a/workouts.html
+++ b/workouts.html
@@ -26,26 +26,32 @@
                 <h3 class="daily-heading">Monday</h3>
                 <div class="input-group">
                     <input type="checkbox">
-                    <input type="text" class="form-input" placeholder="Exercise Name">
+                    <select class="form-input exercise-select">
+                        <option value="">Select an exercise...</option>
+                    </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input" placeholder="Sets x Reps (e.g., 3 x 10)">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button">Add Exercise</button>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
             </div>
 
             <div class="glass-card">
                 <h3 class="daily-heading">Tuesday</h3>
                 <div class="input-group">
                     <input type="checkbox">
-                    <input type="text" class="form-input" placeholder="Exercise Name">
+                    <select class="form-input exercise-select">
+                        <option value="">Select an exercise...</option>
+                    </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input" placeholder="Sets x Reps (e.g., 3 x 10)">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button">Add Exercise</button>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
             </div>
 
             </div>
@@ -53,6 +59,8 @@
         <button class="cta-button">Clear All Workouts</button>
         
     </main>
+
+    <script src="scripts/workout-builder.js"></script>
 
 </body>
 </html>
