--- a/workouts.html
+++ b/workouts.html
@@ -25,33 +25,31 @@
             <div class="glass-card">
                 <h3 class="daily-heading">Monday</h3>
                 <div class="input-group">
-                    <input type="checkbox">
                     <select class="form-input exercise-select">
                         <option value="">Select an exercise...</option>
                     </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input sets-input" placeholder="Sets">
-                    <input type="text" class="form-input reps-input" placeholder="Reps">
+                    <input type="text" class="form-input" placeholder="Sets">
+                    <input type="text" class="form-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button add-exercise-button">Add Exercise</button>
+                <button class="cta-button">Add Exercise</button>
             </div>
 
             <div class="glass-card">
                 <h3 class="daily-heading">Tuesday</h3>
                 <div class="input-group">
-                    <input type="checkbox">
                     <select class="form-input exercise-select">
                         <option value="">Select an exercise...</option>
                     </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input sets-input" placeholder="Sets">
-                    <input type="text" class="form-input reps-input" placeholder="Reps">
+                    <input type="text" class="form-input" placeholder="Sets">
+                    <input type="text" class="form-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button add-exercise-button">Add Exercise</button>
+                <button class="cta-button">Add Exercise</button>
             </div>
 
             </div>
