--- a/workouts.html
+++ b/workouts.html
@@ -30,11 +30,11 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input" placeholder="Sets">
-                    <input type="text" class="form-input" placeholder="Reps">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button">Add Exercise</button>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
             </div>
 
             <div class="glass-card">
@@ -45,16 +45,16 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <input type="text" class="form-input" placeholder="Sets">
-                    <input type="text" class="form-input" placeholder="Reps">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
                     <button class="remove-button">X</button>
                 </div>
-                <button class="cta-button">Add Exercise</button>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
             </div>
 
             </div>
 
-        <button class="cta-button">Clear All Workouts</button>
+        <button class="cta-button clear-all-button">Clear All Workouts</button>
         
     </main>
 
