--- a/workouts.html
+++ b/workouts.html
@@ -20,10 +20,44 @@
         <p class="subtitle">Track your progress and stay on top of your goals.</p>
 
         <div class="cards-grid">
+
+            <div class="glass-card">
+                <h3 class="daily-heading">Monday</h3>
+                <div class="input-group">
+                    <select class="form-input exercise-select">
+                        <option value="">Select an exercise...</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
+                    <button class="remove-button">X</button>
+                </div>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
             </div>
+
+            <div class="glass-card">
+                <h3 class="daily-heading">Tuesday</h3>
+                <div class="input-group">
+                    <select class="form-input exercise-select">
+                        <option value="">Select an exercise...</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <input type="text" class="form-input sets-input" placeholder="Sets">
+                    <input type="text" class="form-input reps-input" placeholder="Reps">
+                    <button class="remove-button">X</button>
+                </div>
+                <button class="cta-button add-exercise-button">Add Exercise</button>
+            </div>
+            
+            </div>
+        
         <button class="cta-button clear-all-button">Clear All Workouts</button>
+
     </main>
 
     <script src="scripts/workout-builder.js"></script>
+
 </body>
 </html>
