--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your All-in-One Assistant</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="back-button-container">
-    <a href="index.html" class="back-button">&lt;</a>
-</div>
+
+    <div class="back-button-container">
+        <a href="#" class="back-button">&lt;</a>
+    </div>
 
     <main class="content-container">
         <h1 class="title">Your All-in-One Assistant.</h1>
@@ -68,7 +69,6 @@
                 </div>
             </a>
         </div>
-
     </main>
 
 </body>
