--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0d1a26">
     <title>Your All-in-One Assistant</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,10 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div class="back-button-container">
-        <a href="#" class="back-button">&lt;</a>
-    </div>
 
     <main class="content-container">
         <h1 class="title">Your All-in-One Assistant.</h1>
