--- a/workouts.html
+++ b/workouts.html
@@ -11,14 +11,15 @@
 </head>
 <body>
 
-    <div class="back-button-container">
+    <div class="nav-header">
         <a href="index.html" class="back-button">&lt;</a>
+        <div class="header-text-container">
+            <h1 class="title">My Weekly Workout Plan</h1>
+            <p class="subtitle">Track your progress and stay on top of your goals.</p>
+        </div>
     </div>
 
     <main class="content-container">
-        <h1 class="title">My Weekly Workout Plan</h1>
-        <p class="subtitle">Track your progress and stay on top of your goals.</p>
-
         <div class="cards-grid">
 
             <div class="glass-card">
