--- a/workouts.html
+++ b/workouts.html
@@ -31,8 +31,8 @@
                         </select>
                     </div>
                     <div class="input-group">
-                        <input type="text" class="form-input" placeholder="Sets">
-                        <input type="text" class="form-input" placeholder="Reps">
+                        <input type="text" class="form-input sets-input" placeholder="Sets">
+                        <input type="text" class="form-input reps-input" placeholder="Reps">
                         <button class="remove-button">X</button>
                     </div>
                     <button class="cta-button add-exercise-button">Add Exercise</button>
@@ -48,8 +48,8 @@
                         </select>
                     </div>
                     <div class="input-group">
-                        <input type="text" class="form-input" placeholder="Sets">
-                        <input type="text" class="form-input" placeholder="Reps">
+                        <input type="text" class="form-input sets-input" placeholder="Sets">
+                        <input type="text" class="form-input reps-input" placeholder="Reps">
                         <button class="remove-button">X</button>
                     </div>
                     <button class="cta-button add-exercise-button">Add Exercise</button>
