--- a/workouts.html
+++ b/workouts.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="page-container">
+    <div class="page-wrapper">
         <div class="nav-header">
             <a href="index.html" class="back-button">&lt;</a>
             <div class="header-text-container">
