--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#0d1a26">
     <title>Your All-in-One Assistant</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +16,7 @@
         <p class="subtitle">Streamline your life, one task at a time.</p>
 
         <div class="cards-grid">
-            <a href="workouts.html" class="glass-card-container">
+            <a href="workout-plan.html" class="glass-card-container">
                 <div class="glass-card">
                     <h2 class="card-title">Workouts</h2>
                     <p class="card-subtitle">Track your weekly exercise plan.</p>
